# learncpp

./: .bazelignore  .bazelrc  .envrc  .gitignore  MODULE.bazel  WORKSPACE.bzlmod  clang.nix  default.nix  extensions.bzl  flake.nix  justfile  nixpkgs.nix
day01/: day01.cpp
day02/: BUILD  day02.cpp
day03/: BUILD  day03.cpp
day04/: BUILD  day04.cpp
day05/: BUILD  main.cpp
day06/: BUILD  main.cpp
day07/: BUILD  main.cpp
day08/: BUILD  main.cpp
day09/: BUILD  main.cpp
day10/: BUILD  main.cpp
day11/: BUILD  main.cpp
day12/: BUILD  main.cpp
day13/: BUILD  main.cpp  sample2.txt
day14/: BUILD  input.txt  main.cpp
day15/: BUILD  main.cpp
day16/: BUILD  main.cpp
day18/: BUILD  input.txt  main.cpp
day19/: BUILD  main.cpp
hello-world/: hello-world.cpp
lib/: BUILD  color.h  coord.h  debug.hpp  grid.hpp  lib.cpp  lib.hpp
